--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1>Student Information</h1>
     
     <div class="info">
-         <img src="c:\Users\karth\OneDrive\Pictures\1000099901.jpg" alt="Student Picture">
+         <img src="karthik.jpg" alt="Student Picture">
         <p><strong>Name:</strong> Bommika kartheek </p>
         <p><strong>Gender:</strong> Male</p>
         <strong>Age:</strong> 20</p>
